# AI-Enterprise-Platform-

./: .env.example  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/connectors/: __init__.py  audit.py  backstop.py  files.py  graph.py  policy.py  snowflake.py
backend/fixtures/: companies.json  deal_files.json  deals.json  documents.json  policy_rules.json  portfolio.json  relationships.json
backend/mcp_server/: server.py
backend/mcp_server/tools/: backstop_tools.py  files_tools.py  graph_tools.py  policy_tools.py  retrieval_tools.py  snowflake_tools.py
backend/models/: backstop.py  files.py  graph.py  snowflake.py
backend/rag/: __init__.py  embeddings.py  ingestion.py  retrieval.py  vector_store.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: chat.ts  deals.ts  policy.ts  rag.ts  triage.ts
frontend/src/components/chat/: ChatPlaceholder.tsx  ChatThreadsSidebar.tsx  ChatView.tsx
frontend/src/components/deals/: DealTable.tsx  ToolCallLog.tsx  TriagePanel.tsx  (+1 more)
frontend/src/contexts/: TenantContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useChat.ts  useChatThreads.ts  useDeals.ts  useRAGStats.ts  useTriageStream.ts
frontend/src/pages/: AuditLogsPage.tsx  GlossaryPage.tsx  GraphExplorerPage.tsx  OverviewPage.tsx  PolicyEnginePage.tsx  RAGPipelinePage.tsx
frontend/src/types/: chat.ts  deal.ts  policy.ts  triage.ts
gateway/: agent.py  app.py  chat.py  config.py  intent_classifier.py  llm_client.py  mcp_client.py  models.py
(+2 files in other folders)
